fix: platform enum